Fix display on small screens.

--- a/stylesheets/button.css
+++ b/stylesheets/button.css
@@ -36,4 +36,8 @@
   .button {
     min-width: 80px;
   }
+
+  .icon-button {
+    min-width: 0;
+  }
 }
